--- a/package.json
+++ b/package.json
@@ -12,16 +12,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^7.0.4",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^7.0.4",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.1",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "ng2-file-upload": "^1.4.0",
+    "rxjs": "~6.4.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -43,6 +52,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "^2.8.0"
   }
 }
