--- a/package.json
+++ b/package.json
@@ -8,20 +8,17 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot" 
+    "postinstall": "ng build --aot"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
     "@angular/cdk": "^7.0.4",
     "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^7.0.4",
-    "@angular/cli":"^6.1.5",
-    "@angular/compiler-cli": "^4.4.6",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
@@ -37,12 +34,13 @@
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "zone.js": "~0.8.26",
-    "typescript":"2.9.2"
+    "typescript": "2.9.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.1",
-    "@angular/compiler-cli": "^6.1.0",
+    "@angular-devkit/build-angular": "^0.900.2",
+    "@angular/cli": "^6.2.9",
+    "@angular/compiler": "^6.1.10",
+    "@angular/compiler-cli": "^4.4.7",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -60,7 +58,7 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "^2.8.0"
-  }, 
+  },
   "engines": {
     "node": "v12.16.0",
     "npm": "6.4.1"
